GNOME Bugzilla – Bug 679844
Windows are not properly closed when quitting from the shell menu
Last modified: 2012-09-27 08:17:21 UTC
This have several side effects. Ephy will exit even if there are ongoing downloads or modified unsubmitted forms. EphyWindow won't be destroyed so dispose and finalize methods won't be called.
Created attachment 218695 [details] [review] Patch
Comment on attachment 218695 [details] [review] Patch This looks OK, just one thought: any reason why we should not make ephy_window_close destroy the window if it's going to return TRUE?
Not that I remember, so I guess we can make ephy_window_close destroy the window and simplify ephy_session_close_all_windows.
Ok, now I remember why. ephy_window_close() is also called from delete_event callback. When delete_event callback returns FALSE the event is propagated and the default handler destroys the widget.
Comment on attachment 218695 [details] [review] Patch OK, I guess it makes sense, although I'm not totally sure it's OK make the method do thing slike this just because it's called from the delete-event handler.
I guess you mean commit_after_freeze :-) Thanks for the review.
Comment on attachment 218695 [details] [review] Patch Pushed to git master now that we have branched