Make sure windows are properly closed when quitting from the shell menu

https://bugzilla.gnome.org/show_bug.cgi?id=679844