src/ephy-window.h
@@ -74,6 +74,8 @@ void		  ephy_window_set_zoom		  (EphyWindow *window,
 void		  ephy_window_activate_location	  (EphyWindow *window);
 const char       *ephy_window_get_location        (EphyWindow *window);
 
+gboolean          ephy_window_close               (EphyWindow *window);
+
 G_END_DECLS
 
 #endif
